@@ -29,7 +29,12 @@
       <artifactId>cucumber-testng</artifactId>
       <version>7.11.0</version>
     </dependency>
-
+<dependency>
+    <groupId>org.projectlombok</groupId>
+    <artifactId>lombok</artifactId>
+    <version>1.18.28</version> <!-- Use the latest version -->
+    <scope>provided</scope>
+</dependency>
     <!-- Extent Reports -->
     <dependency>
       <groupId>com.aventstack</groupId>
@@ -155,6 +160,19 @@
         <plugin>
           <artifactId>maven-project-info-reports-plugin</artifactId>
           <version>3.0.0</version>
+        </plugin>
+        <plugin>
+            <groupId>org.apache.maven.plugins</groupId>
+            <artifactId>maven-compiler-plugin</artifactId>
+            <version>3.8.0</version>
+            <configuration>
+                <source>17</source>
+                <target>17</target>
+                <compilerArgs>
+                    <arg>--add-opens</arg>
+                    <arg>jdk.compiler/com.sun.tools.javac.processing=ALL-UNNAMED</arg>
+                </compilerArgs>
+            </configuration>
         </plugin>
       </plugins>
     </pluginManagement>
